# ezi

./: .gitmodules  Makefile  README.md
include/: app.h  command.h  config.h  debug.h
include/data/: software.h  software_database.h  software_source.h
include/ds/: hash_table.h  slist.h
include/io/: archive.h  endian.h  http.h  read_write.h
include/log/: colors.h  errno.h  logger.h
include/util/: endian.h  free.h  memory.h  path.h  reflection.h  validation.h
src/: add_software_command.c  app.c  command.c  config.c  data_software.c  data_software_database.c  data_software_source.c  ds_hash_table.c  ds_slist.c  echo_command.c  install_software_command.c  io_archive.c  io_endian.c  io_http.c  io_read_write.c  list_software_command.c  log_errno.c  log_logger.c  main.c  usage_command_usage.c  util_endian.c  util_free.c  util_memory.c  util_path.c
tests/: CMakeLists.txt  data_software_database_tests.c  data_software_source_tests.c  data_software_tests.c  ds_hash_table_tests.c  ds_slist_tests.c  io_read_write_tests.c  util_endian_tests.c
